ater Roccos explanation

--- a/index.html
+++ b/index.html
@@ -2,13 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="Describe the project here.">
-    <meta name="author" content="Your Name Here">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="css/reset.css">
+    <title>My Apple site</title>
+
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+
+<nav class="header-color">
+  <li>menu</li>
+  <li>apple</li>
+  <li>shopping cart</li>
+</nav>
+
+<header>
+  <img src="/img/logo.svg" alt="Apple.logo">
+  <button><img src="img/logo.svg" alt="Apple"></button>
+  <nav>
+    <button>=</button>
+    <input type="search">
+    <ul>
+      <li><a href="1"></a></li>
+      <li><a href="2"></a></li>
+      <li><a href="#"></a></li>
+      <li><a href="#"></a></li>
+      <li><a href="#"></a></li>
+      <li><a href="#"></a></li>
+      <li><a href="#"></a></li>
+      <li><a href="#"></a></li>
+    </ul>
+
+  </nav>
+</header>
+
+
+
   </body>
 </html>
